[package]
name = "s8"
version = "0.1.0"
edition = "2021"
description = "simple log viewer for s7"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
unicode-segmentation = "1.11"
warp = "0.3"