[package]
name = "logterm"
version = "0.1.0"
edition = "2021"
description = "simple logs terminal backend"
authors = ["Architect Financial Technologies <hello@architect.xyz>"]
categories = ["command-line-utilities"]
keywords = ["logs", "logging", "server"]
repository = "https://github.com/architect-xyz/logterm"
documentation = "https://docs.rs/logterm"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2"
env_logger = "0.11"
futures-util = "0.3"
iso8601 = { version = "0.6.1", features = ["chrono"] }
log = "0.4"
nom = "7"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.1.7"
unicode-segmentation = "1.11"
warp = "0.3"